fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hi, I'm Jed Humphries</h1>
-								<p>a full stack developer</p>
+								<p>full stack developer</p>
 								<iframe src="https://scratch.mit.edu/projects/726101696/embed" allowtransparency="true" width="304" height="268" frameborder="0" scrolling="no" allowfullscreen></iframe>
 								
 							</div>
@@ -44,7 +44,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/holiday.JPG" alt="" /></span>
-								<p>As part of our final project for the SoC as a team on 6 we used surveys and questionnaires for gathering user feedback, using Disney's creative strategy to help design and build a holiday organiser app that would take the stress out of holidays. We integrated 2 APIs for the end user to check excharge rates and the weather. Always using an agile working practice to iron out any problems (which there were a few) and having regular retros and standups to see if there any areas we could improve.</p>
+								<p>As part of our final project for the SoC as a team on 6 we used surveys and questionnaires for gathering user feedback, using Disney's creative strategy to help design and build a holiday organiser app that would take the stress out of holidays. We integrated 2 APIs for the end user to check exchange rates and the weather forecast. Always using an agile working practice to iron out any problems (which there were a few) and having regular retros and stand ups to see if there any areas we could improve.</p>
 								<br> <p class="links"><a href="https://holiday-helper.netlify.app/" target=”_blank”>> Holiday-Helper <</a></p>
 								<p class="links"><a href="https://github.com/SchoolOfCode/final-project_front-end-team-we-re-on-mute" target=”_blank”>> Github <</a></p>
 
@@ -64,7 +64,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>Feel free to connect me on Linkedin or see what i'm working on with Github. <br>
+								<p>Feel free to connect me on Linkedin or see what i'm working on with Github.<br>
 								<br>
 								✉️📞📠🌐</p>
 								<ul class="icons">
