--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/soc-bootcampers.jpg" alt="" /></span>
-								<p>With emerging technologies, such as industrial robots, artificial intelligence, and machine learning advancing at a incredible pace 🦾🤖 it was time to start thinking about the future and that future is tech! so in 2022 I decided I wanted in and started my journey to become a full stack developer with the School of Code. Working along side some great people from all different backgrounds and walks of life. I'm truly grateful to have had that opportunity to break through into the world of tech.</p>
+								<p>With emerging technologies, such as industrial robots, artificial intelligence, and machine learning advancing at a incredible pace 🦾🤖 it was time to start thinking about the future and my future so in 2022 I decided I wanted in, and started my journey to become a full stack developer with the School of Code. Working along side some great people from all different backgrounds and walks of life. I'm truly grateful to have had that opportunity to break through into the tech industry.</p>
 							</article>
 
 						<!-- Contact -->
