rewrote projects pages

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/holiday.JPG" alt="" /></span>
-								<p>As part of our final project for the SoC as a team on 6 we used surveys and questionnaires for gathering user feedback, using Disney's creative strategy to help design and build a holiday organiser app that would take the stress out of holidays. We integrated 2 APIs for the end user to check exchange rates and the weather forecast. Always using an agile working practice to iron out any problems (which there were a few) and having regular retros and stand ups to see if there any areas we could improve.</p>
+								<p>As part of our final project for the SoC as a team on 6 we used surveys and questionnaires for gathering user feedback, using Disney's creative strategy to help design and build a holiday organiser app that would take the "stress" out of holidaying. We integrated 2 APIs for the user to use a currency exchange rate and to check the 7 day weather forecast. We created and populated a database with emergency telephone numbers when the user selects a number the data is fetched and rendered on the frontend using React. Through out the project we used an agile working practice to iron out any problems that may occur and we also had regular stand ups and retros to see if there were any areas we could improve.</p>
 								<br> <p class="links"><a href="https://holiday-helper.netlify.app/" target=”_blank”>> Holiday-Helper <</a></p>
 								<p class="links"><a href="https://github.com/SchoolOfCode/final-project_front-end-team-we-re-on-mute" target=”_blank”>> Github <</a></p>
 
 								<span class="image main"><img src="images/happy.jpg" alt="" /></span>
-								<p>The mid way project working in a small team to create an app that would aid fellow School of Code bootcampers in their intensive studies by enabling students to view a breakdown of the topics covered, sorting through by week and day created using React.</p>
+								<p>For the mid way one week project working in a small team we created an app that would aid fellow School of Code bootcampers in their intensive studies by enabling students to view a breakdown of the topics covered, sorting through by week and day created using React.</p>
 								<br> <p class="links"><a href="https://happycamper.netlify.app" target=”_blank”>> Happy-Camper <</a></p>
 								<p class="links"><a href="https://github.com/SchoolOfCode/w9_frontend-project-bc12room27" target=”_blank”>> Github <</a></p>
 							</article>
