edit about me page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/soc-bootcampers.jpg" alt="" /></span>
-								<p>With emerging technologies, such as industrial robots, artificial intelligence, and machine learning advancing at a incredible pace 🦾🤖 it was time to start thinking about my future so in 2022 I decided I wanted in to this "new future", I tried to teach myself python through websites and tutorials but I soon found out that something's are learnt best with the help from others so I started my journey with the School of Code. Working along side some great people from all different backgrounds and walks of life working together sharing knowledge. And now I'm truly grateful to have an opportunity to break through into the tech industry.
+								<p>With emerging technologies, such as industrial robots, artificial intelligence, and machine learning advancing at a incredible pace 🦾🤖 it was time to start thinking about my future so in 2022 I decided I wanted with my passion for learning to challenge myself, I taught myself python through websites and tutorials with not the best results. I soon found out that something's are best learnt with the help from others so I started my journey with the School of Code. Working along side some great people from all different backgrounds and walks of life working together sharing knowledge. And now I'm truly grateful to have an opportunity to break through into the tech industry.
 								</p>
 							</article>
 
